9-20-2023

================================
Change log notes
================================

v2.35.4
Updated Termux only.
Updated the Termux install command. It now checks to see if git is installed, if true then skips install. This will speed up the automated install.

v2.35.3
Updated Termux only.
Fixed sed commands in Termux install.sh

v2.35.2
Now at Main menu when cover art notifications enabled it say it's on.
No changes were made to Termux or macOS.

v2.35.1
Fixed issue with help menu Linux version.
No changes were made to Termux or macOS.

v2.35
Changes to Linux only, updated version number on Termux.
Getting cover notifications on Linux takes time, getting 100 results.
3.45 seconds with cover art.
1.71 seconds without cover art.
You will see this when you play an Channel/Playlist/Album for the first time, it has to download all the songs and get the cover art. So I have added a command line argument. 
"yt-playlsit --cover_art"
By default cover art is disabled now. To enable it just run yt-playlist with that argument. It's a trade off, cover art notifications but takes longer to start music/video, or no cover art but 2x faster starting?

v0.18 yt-playlist_macos_beta
This macOS port was taken from the Linux version, Linux downloads the cover art of the Channel/Playlist/Album. I have not found out how to display that in the notifications on mac. So I have removed the download of that cover art.
No changes were made to Linux or Termux only macOS in v2.34.3

v0.18 yt-playlist_macos_beta
yt-playlist with now use /usr/local/bin/bash installed by brew. Updated the dependencies in readme.txt
No changes were made to Linux or Termux only macOS in v2.34.2

v0.17 yt-playlist_macos_beta
Updated the readme.txt file, changed the press y to load yt-playlist. It now works.
No changes were made to Linux or Termux only macOS in v2.34.1

v0.16 yt-playlist_macos_beta
Added a new dependencie jemalloc, will lower cpu usage running yt-playlist.

v2.34